--- a/koha-tmpl/intranet-tmpl/prog/fr/auth.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/fr/auth.tmpl
@@ -53,4 +53,11 @@
 // ]]>
 </script>
 <!-- /TMPL_IF -->
+
+<script type="text/javascript">
+// <![CDATA[
+    document.getElementById('userid').focus(); // auto focus on login input when document is loaded.
+// ]]>
+</script>
+
 <!-- TMPL_INCLUDE name="intranet-bottom.inc" -->
