--- a/koha-tmpl/intranet-tmpl/prog/fr/serials/subscription-add.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/fr/serials/subscription-add.tmpl
@@ -268,7 +268,7 @@ var textbox = '';
             }
             textbox +="<\/tr>";
         } else {
-          textbox +="<tr> <td>"+_('numéros(s) attendu(s)')+"</td><td><input type='text' name='issuesexpectedtemp1' size='4' onkeyup='moreoptionsupdate(\"issuesexpected1\",0)'><br/><a href='javascript:irregularity_check()'>"+_('Irrégularité ? ')+"</a></td></tr>";
+          textbox +="<tr> <td>"+_('1er numéro attendu')+"</td><td><input type='text' name='issuesexpectedtemp1' size='4' onkeyup='moreoptionsupdate(\"issuesexpected1\",0)'><br/><a href='javascript:irregularity_check()'>"+_('Irrégularité ? ')+"</a></td></tr>";
         }
         textbox +="<\/table>\n";
     }
