--- a/koha-tmpl/intranet-tmpl/prog/fr/tools/export.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/fr/tools/export.tmpl
@@ -7,7 +7,7 @@
 
 <h1>Sélectionnez les notices à exporter : </h1>
 <p>
-    <b>Note : The items are exported by this tool unless specified.</b>
+    <b>Remarque : les exemplaires sont exportés par cet outil, sauf si vous les excluez.</b>
 </p>
 
 <form method="post" action="/cgi-bin/koha/tools/export.pl">
