--- a/koha-tmpl/opac-tmpl/prog/fr/opac-authoritiessearchresultlist.tmpl
+++ b/koha-tmpl/opac-tmpl/prog/fr/opac-authoritiessearchresultlist.tmpl
@@ -38,7 +38,7 @@
 				<!-- TMPL_UNLESS name="isEDITORS" -->
 					<th width="10%">Notices bibliographiques</th>
 				<!-- /TMPL_UNLESS -->
-				<th width="10%">Vedettes autorisées complètes</th>				
+				<th width="10%">Vedette entière</th>				
 			</tr>
 			<!-- TMPL_LOOP NAME="result" -->
 				<tr>
