--- a/koha-tmpl/intranet-tmpl/prog/fr/includes/intranet2.css
+++ b/koha-tmpl/intranet-tmpl/prog/fr/includes/intranet2.css
@@ -190,14 +190,22 @@ legend {
 #kohalogo {
     position:fixed;
     left:20px;
-    top:20px;
+    top:10px;
+}
+
+#kohalogo h3 {
+    padding-top:5px;
+    margin-left:0px;
+}
+#kohalogo h3 a {
+    color:white;
 }
 /* MAIN MENU STYLES */
 #mainmenu {
     display:block;
     position:fixed;
     font-weight : normal;
-    margin-top:20px;
+    margin-top:30px;
     margin-right: 5px;
     padding-right: 5px;
     font-size:0.9em;
