--- a/koha-tmpl/intranet-tmpl/prog/fr/serials/claims.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/fr/serials/claims.tmpl
@@ -99,7 +99,7 @@ function Setorder(myorder){
 			<!-- /TMPL_LOOP -->
 		</table>
 		<!-- TMPL_ELSE -->
-		<p>Select a supplier</p>
+		<p>Sélectionnez un fournisseur</p>
 		<!-- /TMPL_IF -->
 
 	<!-- TMPL_IF Name="singlesupplier"-->
