--- a/koha-tmpl/intranet-tmpl/prog/fr/serials/subscription-renew.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/fr/serials/subscription-renew.tmpl
@@ -1,4 +1,9 @@
-<!-- TMPL_INCLUDE NAME="popup-top.inc" -->
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
+<title>Koha &rsaquo;  Renouveller l'abonnement #<!-- TMPL_VAR name="subscriptionid" --></title>
+<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!--TMPL_INCLUDE NAME="menu-serials.inc" -->
 <div id="mainbloc">
 
 <h1 class="serial">renouvellement d'abonnement pour <!-- TMPL_VAR name="bibliotitle" --></h1>
