--- a/koha-tmpl/opac-tmpl/prog/fr/opac-main.tmpl
+++ b/koha-tmpl/opac-tmpl/prog/fr/opac-main.tmpl
@@ -22,35 +22,6 @@
 </div>
 <!-- /TMPL_IF -->
 
-<div id="opac-main-search">
-<h1>Chercher dans notre catalogue</h1>
-    <ul><li>
-    <label for="masthead_search">Chercher dans le catalogue</label>
-    <form name="searchform" method="POST" action="/cgi-bin/koha/opac-search.pl" id="searchform">
-        <input type="text" name="q" style="width: 30%;"/>
-        <input type="submit" value="Rechercher" class="submit">
-    </form>
-    <i>(<a href="/cgi-bin/koha/opac-search.pl">Recherche avancée</a>)</i>
-    </li>
-    <!-- TMPL_IF name="OpacBrowser" -->
-        <li><a href="/cgi-bin/koha/opac-browser.pl">Feuilleter le catalogue</a>, grâce à une hiérarchie de sujets</li>
-    <!-- /TMPL_IF -->
-    <!-- TMPL_IF name="OpacAuthorities" -->
-        <li>Rechercher dans les <a href="/cgi-bin/koha/opac-authorities-home.pl">autorités</a></li>
-    <!-- /TMPL_IF -->
-    <!-- TMPL_IF name="OpacCloud" -->
-        <li>Chercher dans le <a href="/cgi-bin/koha/opac-tags_subject.pl">nuage de sujets</a></li>
-    <!-- /TMPL_IF -->
-        <li>
-            <form name="recent-acqui" action="/cgi-bin/koha/opac-main.pl" method="POST">
-                <label for="recentacqui">Trouver les derniers</label>
-                <input id="recentacqui" type="text" name="recentacqui" value="30" size="3"/> Acquisitions
-                <input type="submit" value=" OK " />
-            </form>
-        </li>
-    </ul>
-</div>
-
 <!-- TMPL_IF NAME="languages" -->
 <div id="opac-main-changelanguage">
     <h1>Changer la langue</h1>
@@ -64,7 +35,7 @@
                 </option>
             <!-- /TMPL_LOOP -->
         </select>
-        <input type="submit" value="Change" />
+        <input type="submit" value="Changer">
     </form>
     </ul>
 </div>
