--- a/koha-tmpl/opac-tmpl/prog/fr/opac-results.tmpl
+++ b/koha-tmpl/opac-tmpl/prog/fr/opac-results.tmpl
@@ -25,7 +25,7 @@
 <!-- /TMPL_IF -->
 
 <!-- TMPL_IF NAME="total" -->
-<h3><!-- TMPL_VAR NAME="total" --> réponses trouvées pour '<!-- TMPL_VAR NAME="searchdesc" -->' <a href="http://o15.bureau.paulpoulain.com/cgi-bin/koha/opac-search.pl">[Nouvelle recherche]</a></h3>
+<h3><!-- TMPL_VAR NAME="total" --> réponses trouvées pour '<!-- TMPL_VAR NAME="searchdesc" -->' <a href="/cgi-bin/koha/opac-search.pl">[Nouvelle recherche]</a></h3>
 <!-- TMPL_ELSE -->
 <!-- TMPL_IF NAME="searchdesc" -->
 <h3> Pas de réponse !</h3>
@@ -229,7 +229,6 @@ Erreur :
                             <!-- TMPL_IF name="publicationyear" --> - <!-- TMPL_VAR name="publicationyear" --><!-- /TMPL_IF -->
                             <!-- TMPL_IF name="place" --> ; <!-- TMPL_VAR name="place" --><!-- /TMPL_IF -->
                             <!-- TMPL_IF name="pages" --> - <!-- TMPL_VAR name="pages" --><!-- /TMPL_IF -->
-                            <!-- TMPL_IF name="notes" --> : <!-- TMPL_VAR name="notes" --><!-- /TMPL_IF -->
                             <!-- TMPL_IF name="size" --> ; <!-- TMPL_VAR name="size" --><!-- /TMPL_IF -->
                             <!-- TMPL_IF name="timestamp" --> <i>(modifié le <!-- TMPL_VAR name="timestamp" -->)</i><!-- /TMPL_IF -->
                         </p>
