--- a/koha-tmpl/intranet-tmpl/prog/en/reports/borrowers_stats.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/reports/borrowers_stats.tmpl
@@ -87,7 +87,7 @@
 			</td>
 			<td><input type="radio" name="Line" value="zipcode" /></td>
 			<td><input type="radio" name="Column" value="zipcode" /></td>
-			<td><input type="text"  name="Filter" /></td>
+			<td><!-- TMPL_VAR NAME="CGIZipCode" --></td>
 			</tr>
 			<tr class="hilighted">
 			<td>&nbsp;</td>
