--- a/koha-tmpl/intranet-tmpl/prog/en/catalogue/detail.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/catalogue/detail.tmpl
@@ -131,7 +131,7 @@
             <!-- TMPL_LOOP NAME="ITEM_RESULTS" -->
                 <tr>
                     <td><!-- TMPL_VAR NAME="description" --></td>
-                    <td><!-- TMPL_VAR NAME="branchname" --> <!-- TMPL_IF NAME="itemcallnumber" --> <!-- TMPL_VAR NAME="itemcallnumber" --><!-- /TMPL_IF --></td>
+                    <td><!-- TMPL_VAR NAME="branchname" --> <!-- TMPL_VAR name="location" --> <!-- TMPL_IF NAME="itemcallnumber" --> <!-- TMPL_VAR NAME="itemcallnumber" --><!-- /TMPL_IF --></td>
                     <td>
                         <!-- TMPL_IF name="datedue" -->
                             On issue to <a href="/cgi-bin/koha/members/moremember.pl?borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->"><!-- TMPL_VAR NAME="cardnumber" --></a>
