--- a/koha-tmpl/opac-tmpl/prog/en/opac-detail.tmpl
+++ b/koha-tmpl/opac-tmpl/prog/en/opac-detail.tmpl
@@ -166,7 +166,7 @@
         <!-- TMPL_LOOP NAME="ITEM_RESULTS" -->
         <tr>
             <td><!-- TMPL_VAR NAME="description" --></td>
-            <td><!-- TMPL_VAR NAME="branchname" --> <!-- TMPL_IF NAME="itemcallnumber" --> <!-- TMPL_VAR NAME="itemcallnumber" --><!-- /TMPL_IF --></td>
+            <td><!-- TMPL_VAR NAME="branchname" --> <!-- TMPL_VAR name="location" --> <!-- TMPL_IF NAME="itemcallnumber" --> <!-- TMPL_VAR NAME="itemcallnumber" --><!-- /TMPL_IF --></td>
             <td>
                 <!-- TMPL_IF name="datedue" -->
                 On issue to <!-- TMPL_VAR NAME="cardnumber" -->
