--- a/koha-tmpl/intranet-tmpl/prog/en/catalogue/detail.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/catalogue/detail.tmpl
@@ -219,10 +219,10 @@ function Dopop(link) {
 function confirm_deletion(count) {
         var is_confirmed;
 	if (count>0){
-		    is_confirmed= alert('you have [ '+ count +' ] item(s) linked \n you must delete all items before delete this biblio');
+		    is_confirmed= alert(_('you have [ '+ count +' ] item(s) linked \n you must delete all items before delete this biblio'));
 		    }
         else{
-		    is_confirmed= confirm('Are you sure you want to delete this biblio? ');
+		    is_confirmed= confirm(_('Are you sure you want to delete this biblio? '));
 	}
 
     
