Adding link to moremember to directly email members. This could be considered as unsafe since emails are plain text and may be used by spam robots. BUT : Authentication required to get to these pages may help securing those data.

--- a/koha-tmpl/intranet-tmpl/prog/en/members/moremember.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/moremember.tmpl
@@ -132,7 +132,7 @@
     <!-- /TMPL_IF -->  	
     <p><label>Fax: </label><!-- TMPL_VAR NAME="fax" --></p>
     <!-- TMPL_UNLESS NAME="I"-->
-    <p><label>E-mail address:</label><!-- TMPL_VAR NAME="email" --></p>
+    <p><label>E-mail address:</label><a href="mailto:<!-- TMPL_VAR NAME="email" -->"><!-- TMPL_VAR NAME="email" --></a><!--TMPL_IF Name="emailpro"-->, <a href="mailto:<!-- TMPL_VAR NAME="emailpro" -->"><!-- TMPL_VAR NAME="emailpro" --></a><!--/TMPL_IF--></p>
     <p><label>Date of birth:</label><!-- TMPL_VAR NAME="dateofbirth" --></p>
     <p><label>Sex:</label><!-- TMPL_VAR NAME="sex" --></p>
     <!-- /TMPL_UNLESS -->
