--- a/koha-tmpl/opac-tmpl/prog/fr/opac-advsearch.tmpl
+++ b/koha-tmpl/opac-tmpl/prog/fr/opac-advsearch.tmpl
@@ -441,7 +441,7 @@
 <!-- RANK LIMITS -->
 <!-- SEARCH BUTTONS -->
 <p>
-    <input class="submit" type="submit" accesskey="s" name="do" title="Rechercher" value="Rechercher">
+    <input class="submit" type="submit" accesskey="s" name="do" title="Rechercher" value="OUI">
     <!-- TMPL_IF NAME="expanded_options" -->
         <a href="/cgi-bin/koha/opac-search.pl">[Moins d'options]</a>
     <!-- TMPL_ELSE -->
