--- a/koha-tmpl/opac-tmpl/prog/fr/opac-authorities-home.tmpl
+++ b/koha-tmpl/opac-tmpl/prog/fr/opac-authorities-home.tmpl
@@ -60,7 +60,7 @@
             </p>
             <p>(Ajouter % à la fin du mot si vous souhaitez utiliser une troncature droite : <b>théor%</b> renverra à théorie & théorique)</p>
             <p>
-                <input type="submit" value="Rechercher" class="submit">
+                <input type="submit" value="OUI" class="submit">
             </p>
         </div>
     </form>
