--- a/koha-tmpl/intranet-tmpl/prog/fr/catalogue/detail.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/fr/catalogue/detail.tmpl
@@ -131,7 +131,7 @@
             <!-- TMPL_LOOP NAME="ITEM_RESULTS" -->
                 <tr>
                     <td><!-- TMPL_VAR NAME="description" --></td>
-                    <td><!-- TMPL_VAR NAME="branchname" --> <!-- TMPL_IF NAME="itemcallnumber" --> <!-- TMPL_VAR NAME="itemcallnumber" --><!-- /TMPL_IF --></td>
+                    <td><!-- TMPL_VAR NAME="branchname" --> <!-- TMPL_VAR name="location" --> <!-- TMPL_IF NAME="itemcallnumber" --> <!-- TMPL_VAR NAME="itemcallnumber" --><!-- /TMPL_IF --></td>
                     <td>
                         <!-- TMPL_IF name="datedue" -->
                             Prêté à : <a href="/cgi-bin/koha/members/moremember.pl?borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->"><!-- TMPL_VAR NAME="cardnumber" --></a>
@@ -219,10 +219,10 @@ function Dopop(link) {
 function confirm_deletion(count) {
         var is_confirmed;
 	if (count>0){
-		    is_confirmed= alert('you have [ '+ count +' ] item(s) linked \n you must delete all items before delete this biblio');
+		    is_confirmed= alert(_('you have [ '+ count +' ] item(s) linked \n you must delete all items before delete this biblio'));
 		    }
         else{
-		    is_confirmed= confirm('Are you sure you want to delete this biblio? ');
+		    is_confirmed= confirm(_('Êtes vous sûr de vouloir supprimer cette nogice?'));
 	}
 
     
