--- a/koha-tmpl/intranet-tmpl/prog/fr/includes/intranet2.css
+++ b/koha-tmpl/intranet-tmpl/prog/fr/includes/intranet2.css
@@ -26,6 +26,7 @@ table {
     border-collapse : inherit;
     border : 1px solid #CCCCCC;
     margin : 1em 0 1em 20px;
+    margin-right : 5%;
     border-collapse:collapse;
 }
 
