--- a/koha-tmpl/intranet-tmpl/prog/fr/serials/serials-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/fr/serials/serials-home.tmpl
@@ -5,6 +5,50 @@
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-serials.inc" -->
 
+
+<!--TMPL_IF Name="information"-->
+<div id="information">
+Abonnement(s) mis à jour :
+<table>
+  <tr>
+    <th>
+      Serialseq
+    </th>
+    <th>
+      Etat
+    </th>
+    <th>
+      Publié le
+    </th>
+    <th>
+      Date prévue
+    </th>
+    <th>
+      Notes
+    </th>
+  </tr>  
+<!--TMPL_LOOP Name="information"-->
+  <tr>
+    <td>
+      <!--TMPL_VAR Name="serialseq"-->
+    </td>
+    <td>
+      <!--TMPL_VAR Name="status"-->
+    </td>
+    <td>
+      <!--TMPL_VAR Name="publisheddate"-->
+    </td>
+    <td>
+      <!--TMPL_VAR Name="planneddate"-->
+    </td>
+    <td>
+      <!--TMPL_VAR Name="notes"-->
+    </td>
+  </tr>  
+<!--/TMPL_LOOP -->
+</table>
+</div>
+<!--/TMPL_IF-->
 <h1>Abonnements périodiques</h1>
 <div id="serials_home">
 	<h2>Recherche des abonnements existants</h2>
@@ -105,7 +149,7 @@
                 <!-- TMPL_ELSE -->
                     <td>
                 <!-- /TMPL_IF -->
-                  <a href="/cgi-bin/koha/serials/serials-edit.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->&amp;serstatus=1">Bulletinage</a>
+                  <a href="/cgi-bin/koha/serials/serials-edit.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->&amp;serstatus=1,3">Bulletinage</a>
                 </td>
             </tr>
         <!-- /TMPL_LOOP -->
