--- a/koha-tmpl/opac-tmpl/prog/fr/includes/opac.css
+++ b/koha-tmpl/opac-tmpl/prog/fr/includes/opac.css
@@ -224,14 +224,18 @@ tr.highlight td, tr.highlight th {
     white-space: nowrap;
 }
 #menu ul {
-    padding-left:0px;
-    margin:0;
-    padding-bottom:0px;
+    padding:0 0 0 10px;
+    margin-left:5px;
 }
 #menu li {
     list-style-type:none;
     margin:0px;
-    padding-bottom:10px;
+    padding:0 0 10px 0;
+}
+#menu ul li {
+    list-style-type:circle;
+    margin:0px;
+    padding:0 0 10px 0;
 }
 
 
