adding volume and volumeddesc field in the result list. Kados, pls check that it is interesting for you as well (sounds interesting for serials or volumed publications, where the title will be the same on every volume, like an encyclopedia

--- a/koha-tmpl/opac-tmpl/prog/en/opac-results.tmpl
+++ b/koha-tmpl/opac-tmpl/prog/en/opac-results.tmpl
@@ -214,7 +214,7 @@ Error :
                             <!-- TMPL_ELSE -->
                             <a class="title" href="/cgi-bin/koha/opac-detail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" ESCAPE="URL" -->">
                                 <!-- TMPL_VAR NAME="title" -->
-                            </a> <!-- TMPL_VAR NAME="subtitle" -->
+                            </a> <!-- TMPL_VAR NAME="subtitle" --><!-- TMPL_IF name="volume" -->,<!-- TMPL_VAR name="volume" --><!-- /TMPL_IF --> <!-- TMPL_IF name="volumeddesc" -->, <!-- TMPL_VAR name="volumeddesc" --><!-- /TMPL_IF -->
                             <!-- /TMPL_IF -->
                             <!-- /TMPL_IF -->
                         </p>
@@ -236,14 +236,14 @@ Error :
                         </p>
                         <!-- /TMPL_IF -->
                     </td>
-                    <td>
+                    <td width="20%">
                         <!-- TMPL_IF NAME="items_loop" -->
                         <span class="available">
                             <!-- TMPL_LOOP NAME="items_loop" -->
                                 <!-- TMPL_VAR NAME="count" --> <!-- TMPL_VAR NAME="branchname" -->
                                 <i>
                                 <!-- TMPL_IF name="location" --> <!-- TMPL_VAR name="location" --><!-- /TMPL_IF -->
-                                <!-- TMPL_IF name="itemcallnumber" --> <!-- TMPL_VAR name="itemcallnumber" --><!-- /TMPL_IF -->
+                                <!-- TMPL_IF name="itemcallnumber" --> <br /><!-- TMPL_VAR name="itemcallnumber" --><!-- /TMPL_IF -->
                                 <!-- TMPL_IF name="classification" -->
                                     <a href="/cgi-bin/koha/opac-search.pl?q=callnum:<!-- TMPL_VAR NAME="classification" ESCAPE="URL" -->">
                                         <!-- TMPL_VAR NAME="classification" -->
