warning the user about the redirect after the install has completed, giveing them the option to click directly

--- a/koha-tmpl/intranet-tmpl/prog/en/installer/step3.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/installer/step3.tmpl
@@ -78,7 +78,7 @@ function Hide(link) {
 <!--/TMPL_IF-->
 <!--TMPL_IF Name="finish"-->
   <h1>Congratulations, Installation complete</h1>
-  
+  <p>If this page does not redirect in 5 seconds, click <a href="/">here</a>.</p> 
 <!--/TMPL_IF-->
 <!--TMPL_IF Name="selectframeworks"-->
   <h2 align="center">Selecting Default Settings</h2>
